--- a/package.json
+++ b/package.json
@@ -3,8 +3,16 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
+  "workspaces": [
+    "apps/*"
+  ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "concurrently -n A,B,C -c green,blue,magenta \"npm:dev -w apps/commoditiy-server-a\" \"npm:dev -w apps/commoditiy-server-b\" \"npm:dev -w apps/commoditiy-server-c\"",
+    "dev:a": "npm run dev -w apps/commoditiy-server-a --port=5001",
+    "dev:b": "npm run dev -w apps/commoditiy-server-b --port=5002",
+    "dev:c": "npm run dev -w apps/commoditiy-server-c --port=5003",
+    "start": "npm run start -w apps/commoditiy-service-a & npm run start -w apps/commoditiy-service-b & npm run start -w apps/commoditiy-service-c"
   },
   "repository": {
     "type": "git",
@@ -13,12 +21,12 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
   "bugs": {
     "url": "https://github.com/talmid-mitmared/mitmar-d-parallel/issues"
   },
   "homepage": "https://github.com/talmid-mitmared/mitmar-d-parallel#readme",
   "devDependencies": {
-    "concurrently": "^9.2.1"
+    "concurrently": "^9.2.1",
+    "yargs": "^18.0.0"
   }
 }
