--- a/apps/commoditiy-server-a/package.json
+++ b/apps/commoditiy-server-a/package.json
@@ -7,7 +7,7 @@
 
   "scripts": {
     "dev": "nodemon index.js",
-    "start": "node index.js"
+    "start": "node --max-old-space-size=64 node index.js"
   },
   "dependencies": {
     "express": "^4.19.2"
